chore: move args to kafka-run-class.sh
Signed-off-by: KaimingWan <kaiming.wan@automq.com>